build: We now have an empty, working solution
We removed unnecessary parts, renamed template files and did some housekeeping

Co-authored-by: Bernhard Schenk <bernhardschenk@gmx.de>
Co-authored-by: Michael Mahlberg <mm@consulting-guild.de>
Co-authored-by: Stefan Boos <kontakt@boos.systems>

--- a/BowlingKata.Logic.Tests/BowlingKata.Logic.Tests.csproj
+++ b/BowlingKata.Logic.Tests/BowlingKata.Logic.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DotnetStarter.Logic\DotnetStarter.Logic.csproj" />
+        <ProjectReference Include="..\BowlingKata.Logic\BowlingKata.Logic.csproj" />
     </ItemGroup>
 
 </Project>
